--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>KnowShare</title>
-   <link rel="stylesheet" href="static/app.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KnowShare</title>
+  <link rel="stylesheet" type="text/css" href="static/Main.css">
 </head>
 <body>
   <header>
-      <h1>KnowShare</h1>
-    </div>
+    <img src="Images/3 copy.svg" alt="KnowShare Logo" class="logo">
+    <h1>KnowShare</h1>
+
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <div class="button-group">
+          <a href="Templates/about.html" class="button">About</a>
+          <a href="Templates/contact.html" class="button">Contact</a>
+        </div>
+        
       </ul>
     </nav>
   </header>
   <main>
+    
     <section id="hero">
       <div class="hero-content">
         <h2>Welcome to The Community!</h2>
-    </section>
-    <section id="about">
-      <!-- About section content here -->
-    </section>
-
-    <section id="features">
-      <!-- Features section content here -->
-    </section>
-
-    <section id="contact">
-      <!-- Contact section content here -->
+        <div class="cta-buttons">
+          <a href="Templates/Sign_in.html" class="btn btn-sign-in">Sign In</a>
+          <a href="Templates/register.html" class="btn btn-Create Account">Create Account</a>
+        </div> 
+        <div class="bubble-font">A user-friendly and engaging platform for sharing experiences and valuable insights.</div>
+      </div> 
     </section>
   </main>
-
+  
   <footer>
     <p>&copy; 2023 KnowShare. All rights reserved.</p>
   </footer>
-</body>
+</body> 
+
 </html>
