--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <div class="button-group">
-          <a href="Templates/about.html" class="button">About</a>
-          <a href="Templates/contact.html" class="button">Contact</a>
+          <a href="Templates/About.html" class="button">About</a>
+          <a href="Templates/Contact.html" class="button">Contact</a>
         </div>
         
       </ul>
