--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav>
       <ul>
         <div class="button-group">
-          <a href="Templates/Sign_in.html" class="btn btn-sign-in">Sign In</a>
-          <a href="Templates/register.html" class="btn btn-Create Account">Create Account</a>          
+          <a href="Templates/About.html" class="button">About</a>
+          <a href="Templates/Contact.html" class="button">Contact</a>
         </div>
         
       </ul>
